# vectors

./: .gitignore  AGENTS.md  GEMINI.md  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
electron/: main.js
engine/: Cargo.toml
engine/src/: ai.rs  boolean.rs  brush.rs  commands.rs  engine.rs  image_ops.rs  intelligent_shapes.rs  io.rs  lib.rs  objects.rs  psd.rs  render.rs  selection.rs  smart_backgrounds.rs  svg.rs  tracer.rs  types.rs  warp.rs
engine/src/intelligent_shapes/: arrow.rs  car.rs  circle.rs  cloud.rs  gear.rs  house.rs  person.rs  polygon.rs  rectangle.rs  speech_bubble.rs  star.rs  starburst.rs
engine/src/smart_backgrounds/: circuit.rs  crystal.rs  grass.rs  mesh.rs  nebula.rs  ocean.rs  stars.rs
scripts/: build-engine.sh
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.vue  ai.ts  main.ts  style.css
web/src/components/: BrushStudio.vue  LayerItem.vue  SmartParams.vue
