[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "Window", "Document", "HtmlImageElement", "Blob", "Url", "Path2d", "CanvasGradient", "console"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
base64 = "0.21"
kurbo = "0.9"
js-sys = "0.3"
console_error_panic_hook = "0.1"
flate2 = "1.0"
roxmltree = "0.18"